# Tools

./: .gitignore  Archive-Tool.cmd  Archive.cmd  EncryptGPG.cmd  Extract.cmd  INSTALL.cmd  Make-Dir.cmd  MoveFiles.cmd.txt  README.md  Rename Rule.txt  Rename-AddDate.cmd  Settings.cmd.txt  SettingsOptions.cmd.end.txt  SettingsOptions.cmd.txt  Template.cmd  hardlink.cmd  http-device.cmd  profile.dir
Archive-Tools/: 7z_exclude.txt  Add-Disc-Directory.cmd  Archive-Extension-Sample.7zext  Archive-Extension.cmd  Archive-Tool.cmd  Archive.cmd  ArchiveOptions.cmd  Archive_Books.cmd  Archive_Directory-winrar.cmd  Archive_Directory.cmd  Archive_Videos.cmd  Extract-All.cmd  Extract.cmd  ExtractSelected.cmd  INSTALL.cmd  Link-Add-Date.cmd  Make-ArchivesListfile.cmd  Make-Tree.cmd  ROBOCOPY_FILES.cmd  Re_Archive.cmd  Remove-Empty-Dir.cmd  SettingsOptions.cmd.txt  Setup.cmd  XCOPY_DIRECTORY.cmd  XCOPY_FILES.cmd  XCOPY_LIST.txt  mp4img.cmd  open_from_img.cmd  profile.archive  remove_driveletter.py  rename-xxx.cmd  urlDecode.py  vlc-thumbsnail.cmd
AutoHotkey/: Notepad-Broken-Key-Fix.ahk  Remote controller.ahk  Sample.ahk
Backup-Tools/: XCOPY_DIRECTORY.cmd  XCOPY_FILES.cmd
File-Tools/: Archive-Extension-Sample.7zext  Archive-Extension.cmd  Archive_Books.cmd  Archive_Directory.cmd  Link-Add-Date.cmd  (+5 more)
Python/mp3tag-tool/: pyproject.toml  requirements.txt  setup.py  strip_url.py  update_video_db.py
Python/mp3tag-tool/log/: logger.ini
Python/mp3tag-tool/mta/: mta.py
Python/mp3tag-tool/videodb/: EncorderFormats.py  __init__.py  logger.py  mtb.py  url_parser.py  vid.py  vtb.py
(+240 files in other folders)
